--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "framer-motion": "^4.1.17",
+    "hero-slider": "^2.0.3",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
