--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
