--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hookform/resolvers": "^2.6.0",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
-    "hero-slider": "^2.0.3",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "react-hook-form": "^7.10.0",
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
-  "devDependencies": {
-    "dotenv": "^10.0.0"
-  }
+  "devDependencies": {}
 }
