--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.10.0",
+    "react-query": "^3.19.0",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
