--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/resolvers": "^2.6.0",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
