--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
+    "googleapis": "^84.0.0",
+    "http2": "^3.3.7",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
