--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@hookform/resolvers": "^2.8.0",
     "axios": "^0.21.1",
+    "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "googleapis": "^84.0.0",
