--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "googleapis": "^84.0.0",
     "http2": "^3.3.7",
+    "mongodb": "^4.2.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
