--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http2": "^3.3.7",
     "mongodb": "^4.2.1",
     "next": "10.2.3",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
