--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
     "react-query": "^3.21.1",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
