--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.21.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.5",
+    "sharp": "^0.30.7",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
